[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = "broxy"
version = 0.0.1

[options]
packages = find:
package_dir =
    =src

[options.packages.find]
where = src
include = broxy

[options.entry_points]
console_scripts =
    broxy = broxy:main
